--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-
+<html>
+<h1> Это сайт про бравл старс
+<p>а пока смешные моменты бравл старс</p>
+<a href="https://www.youtube.com/watch?v=iHW_giJ9V3U">Смешные моменты бравл старс #249 здесь</a>
+<img src="https://i.pinimg.com/originals/df/e7/51/dfe75110ace2fec917715ba8ce82e222.jpg"/>
