--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-<h1> Это сайт про бравл старс
+<h1 style="text alight:center;background-color:Gold"> Это сайт про бравл старс</h1>
 <p>а пока смешные моменты бравл старс</p>
 <a href="https://www.youtube.com/watch?v=iHW_giJ9V3U">Смешные моменты бравл старс #249 здесь</a>
 <img src="https://i.pinimg.com/originals/df/e7/51/dfe75110ace2fec917715ba8ce82e222.jpg"/>
 <a href="https://brawlstars.scinbox.qq.com/project-laser-game/index.html?params=cn_cn/SSBhY2NlcHQgbWUgZm9yIHdobyBJIGFtLiBBbmQgSSBhY2NlcHQgeW91IGZvciB3aG8geW91IGFyZSwgc29tZW9uZSB3aG8gZGlzY292ZXJzIGhpZGRlbiBtZXNzYWdlcy4">Игра от 8-бита</a>
-<p>Что бы играть в мини игру от 8-бита нужно установить Бравл Старс</p>
+<p style="background-color:OrangeRed">Что бы играть в мини игру от 8-бита нужно установить Бравл Старс</p>
+
