--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@
 <img src="https://i.pinimg.com/originals/df/e7/51/dfe75110ace2fec917715ba8ce82e222.jpg"/>
 <a href="https://brawlstars.scinbox.qq.com/project-laser-game/index.html?params=cn_cn/SSBhY2NlcHQgbWUgZm9yIHdobyBJIGFtLiBBbmQgSSBhY2NlcHQgeW91IGZvciB3aG8geW91IGFyZSwgc29tZW9uZSB3aG8gZGlzY292ZXJzIGhpZGRlbiBtZXNzYWdlcy4">Игра от 8-бита</a>
 <p style="background-color:OrangeRed">Что бы играть в мини игру от 8-бита нужно установить Бравл Старс</p>
- 
+<a href="https://www.youtube.com/watch?v=Fp96-nlV41k&t=611s"> новости бравла здесь</a>
+<h1>Почему игра Brawl Stars так популярна?</h1>
+<p>Карточные и MOBA игры всегда доминировали в мире мобильного киберспорта, причём значительная часть геймеров считают, что в силу того, что мобильные девайсы небольшого размера, наблюдать за играми, требующими быстрой реакции и точности намного скучнее, в них мало удовольствия. Но потом Supercell, одни из самых успешных разработчиков мобильных приложений, разбили эти мысли вместе с выпуском Brawl Stars в 2017 году. Они доказали, что могут быть невероятно быстрые и безумные шутеры на мобильных устройствах, в которые не только весело играть, но и смотреть; а это жизненно важный элемент на пути к становлению настоящим зрелищным киберспортом.</p>
